2004-07-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c, arch/ogl/gr.c, arch/ogl/ogl.c, mem/mem.c,
	include/d_io.h, include/pstypes.h, include/u_dpmi.h,
	libmve/mvelib.c, libmve/mveplay.c, main/cntrlcen.c, main/gameseq.c,
	main/movie.c, main/newmenu.c, main/playsave.c, main/songs.c,
	main/state.c, main/text.c: add "#ifdef macintosh" for carbon target

	* D2X.make, arch/include/gui.h, arch/carbon/gui.c, arch/carbon/conf.h,
	arch/carbon/findfile.c,	arch/carbon/SDL_main.c, arch/carbon/descent.r:
	new files for supporting compilation with MPW for carbon (Mac OS 9)

	* include/strutil.h, misc/strutil.c: add str(n)icmp for carbon

	* main/playsave.c: do not seek while writing, carbon does not like it

	* arch/ogl/gr.c: use portable CFILE instead of POSIX file in write_bmp

	* cfile/cfile.c: use portable ffilelength in cfile_size

	* 2d/bitblt.c, 2d/font.c, 2d/rle.c, arch/ogl/gr.c, iff/iff.c,
	main/inferno.c, main/kconfig.c, main/multi.c, main/multibot.c,
	main/netmisc.c, main/newdemo.c, mem/mem.c: avoid assigments between
	unsigned and signed char, MPW does not like these

2004-06-26  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamemine.c, main/gamemine.h, main/gamesave.c: remove some
	unnecessary globals

2004-06-01  Bradley Bell  <btb@icculus.org>

	* libmve/mve_main.c: cast malloc function pointer

	* MVEPlayer-Info.plist, d2x.xcode/project.pbxproj: added MVEPlayer
	target to XCode project

2004-05-31  Bradley Bell  <btb@icculus.org>

	* include/pstypes.h: fix accidental solaris breakage

	* main/object.c: fix crash caused by death-cam code

	* d2x-Info.plist, d2xgl-Info.plist, d2x.xcode/project.pbxproj:
	XCode project simplifications, network enabled

	* 2d/pixel.c, arch/ogl/ogl.c, include/pstypes.h,
	include/strutil.h, libmve/mveplay.c: XCode compilability fixes

	* Info.plist.in, Makefile.am, configure.ac: remove old OSX bundle
	stuff

	* English.lproj/InfoPlist.strings, d2x-Info.plist,