@@ -1,3 +1,7 @@
+2004-07-02  Martin Schaffner  <maschaffner@gmx.ch>
+
+	* include/pstypes.h: This time, I correctly applied Chris Taylor's patch
+
 2004-07-01  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
 	* 2d/font.c, arch/ogl/gr.c, arch/ogl/ogl.c, mem/mem.c,
